src/components/Carousel/Location/Location.module.css
.slide {
    width: 256px;
    margin-right: 16px;
    border-radius: 8px;
    background-color: white;
    flex-shrink: 0;
    overflow: hidden;
}


.slidepic{
    width: 100%;
    height: 160px;

    position: relative;
    overflow: hidden;
}

.image{
    object-fit: cover !important;
}

.locationInfoContainer{
    padding: 8px;
}

.spotName {
    font-weight: var(--text-weight-bold);
}

.location {
    font-size: 14px;
}

.ratingContainer {
    display: flex;
}

.numReviews {
    padding-top: 2px;
    margin-left: 4px;
}

.starempty{
    color: Grey;
    
}

.starfull{
    color: gold;
}

